# roncav-budget

./: .editorconfig  APPLE_DESIGN_IMPLEMENTATION.md  BUILD_E_COMMIT.bat  CHANGELOG.md  CHECKLIST_PRODUCAO.md  CNAME  CODE_OF_CONDUCT.md  COMO_EXECUTAR.md  COMO_RODAR.md  COMO_VENDER.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  EXECUTAR_AGORA.md  GITHUB_SETUP.md  GIT_AUTO_COMMIT.bat  GIT_AUTO_COMMIT_SECURE.bat  GUIA_RAPIDO.md  GUIA_VISUAL_COMPLETO.md  IMPLEMENTACAO_COMPLETA.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Orcamento.sln  README.md  README.pt-BR.md  Readme_Roncav_Budget.md  SECURITY.md  SOLUCAO_ERRO_BIBLIOTECA.md  build-log.txt  git-auto-commit.ps1  index.html
Core/: .dockerignore  .env  .env.example  CNAME  Cargo.toml  DEPENDENCIAS.md  DEPLOY.md  Dockerfile  deploy.ps1
Core/.github/workflows/: deploy-railway.yml  deploy.yml
Core/avila-arrow/: Cargo.toml  README.md  bench_results.txt
Core/avila-arrow/benches/: compression_bench.rs  extended_bench.rs  scientific_bench.rs  simd_bench.rs
Core/avila-arrow/examples/: basic.rs  compression.rs  compute.rs  ipc.rs  scientific.rs
Core/avila-arrow/src/: array.rs  compute.rs  datatypes.rs  error.rs  lib.rs  record_batch.rs  scientific.rs  simd.rs
Core/avila-async/: CHANGELOG.md  Cargo.toml  INDUSTRY40_SUMMARY.md  README.md  README_INDUSTRY40.md  RELEASE_v0.3.0.md  RELEASE_v0.4.0.md  RELEASE_v0.5.0.md
Core/avila-async/examples/: ai_prediction.rs  blockchain_audit.rs  channel_demo.rs  crypto_security.rs  digital_twin.rs  edge_computing.rs  genetic_tuning.rs  hello_world.rs  industry40_autoscale.rs  industry40_health.rs  industry40_metrics.rs  industry40_tracing.rs  neural_optimization.rs  parallel_tasks.rs  quantum_scheduling.rs  timeout_demo.rs
Core/avila-async/src/: ai.rs  autoscale.rs  blockchain.rs  crypto.rs  digital_twin.rs  edge.rs  genomic.rs  health.rs  lib.rs  metrics.rs  neuro.rs  quantum.rs  tracing.rs
Core/avila-async/tests/: integration_test.rs
Core/avila-bignum/: Cargo.toml  README.md
Core/avila-bignum/src/: lib.rs
Core/avila-cache/: Cargo.toml  README.md
Core/avila-cache/src/: lib.rs
Core/avila-cell-core/: Cargo.toml  README.md
Core/avila-cell-core/src/: cell.rs  lib.rs  lifecycle.rs  message.rs  state.rs
Core/avila-compress/: Cargo.toml
Core/avila-compress/benches/: compression_benchmark.rs  dictionary_bench.rs  lz4_bench.rs  simd_bench.rs
Core/avila-compress/examples/: aviladb_integration.rs  avz_format.rs  basic.rs  benchmark.rs  checksums.rs  columnar.rs  compression_levels.rs  compression_levels_new.rs  debug.rs  dictionary.rs  scientific_data.rs  simd.rs  streaming.rs
Core/avila-compress/src/: checksum.rs  columnar.rs  dictionary.rs  error.rs  format.rs  lib.rs  lz4.rs  metrics.rs  parallel.rs  simd.rs  stream.rs
Core/avila-compress/target_local/: .rustc_info.json
Core/avila-compress/tests/: debug_test.rs  dictionary_test.rs  simd_test.rs
Core/avila-coordinator/: Cargo.toml
Core/avila-coordinator/src/: lib.rs
Core/avila-crdt/: Cargo.toml
Core/avila-crdt/src/: lib.rs
Core/avila-db/: Cargo.toml  Criterion.toml
Core/avila-db/avila-math/: Cargo.toml
Core/avila-db/avila-nucleus/: Cargo.toml
Core/avila-db/avila-primitives/: Cargo.toml
Core/avila-db/benches/: compression_bench.rs  database_ops.rs  query_bench.rs  query_performance.rs
Core/avila-db/examples/: advanced_usage.rs  ai_chat_rag.rs  ai_rag_chat.rs  basic.rs  basic_crud.rs  complete_demo.rs  game_backend.rs  game_leaderboard.rs  iot_telemetry.rs  quickstart.rs  vector_search.rs
Core/avila-db/src/: auth.rs  cache.rs  client.rs  collection.rs  compression.rs  config.rs  database.rs  document.rs  error.rs  hnsw.rs  http.rs  lib.rs  partition.rs  query.rs  storage.rs  telemetry.rs  vector.rs
Core/avila-db/tests/: integration_tests.rs
Core/avila-dns/: Cargo.toml
Core/avila-dns/src/: lib.rs
Core/avila-docs-site/: CNAME  index.html  script.js  styles.css
Core/avila-error/: Cargo.toml  README.md
Core/avila-error/avila-error-derive/: Cargo.toml
Core/avila-error/examples/: usage.rs
Core/avila-error/src/: lib.rs
Core/avila-finite-fields/: Cargo.toml
Core/avila-finite-fields/src/: lib.rs
Core/avila-frontend/: Cargo.toml  DEMOS_README.md  DEPLOY.md  INSTALLATION.md  PROJETO_COMPLETO.md  README.md  SUMMARY.md  browser-demo.html  clustering-demo.html  dataframe-demo.html  demos.html  geo-demo.html  index.html  ml-demo.html  preview.html  server.rs  telemetry-demo.html  tokenizer-demo.html  vision-demo.html
Core/avila-frontend/src/: components.rs  core.rs  dom.rs  events.rs  lib.rs  router.rs  state.rs
Core/avila-geo-workspace/: Cargo.toml
Core/avila-geo-workspace/.cargo/: config.toml
Core/avila-grpc/: Cargo.toml
Core/avila-grpc/src/: lib.rs
Core/avila-id/: Cargo.toml
Core/avila-id/src/: lib.rs
Core/avila-lease/: Cargo.toml
Core/avila-lease/src/: lib.rs
Core/avila-log/: Cargo.toml
Core/avila-log/src/: lib.rs
Core/avila-math/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  pyproject.toml
Core/avila-math/benches/: conv4d.rs  fft.rs  quaternions.rs  tensor_ops.rs
Core/avila-math/examples/: autograd_xor.rs  conv4d_neural_network.rs  geometry_4d.rs  kalman_tracking.rs  machine_learning.rs  quaternion_animation.rs  (+3 more)
Core/avila-mpc/: Cargo.toml
Core/avila-ndarray/: Cargo.toml
Core/avila-numeric/: Cargo.toml  LICENSE
Core/avila-oauth/: Cargo.toml
Core/avila-primitives/: ANALISE-BASE-BIBLIOTECARIA-100%.md  ANALISE-BASE-BIBLIOTECARIA.md  Cargo.toml  DOCUMENTACAO.md  INDICE.md  NOTEBOOK1-MANIFESTO.md  NOTEBOOK2-MANIFESTO.md  NOTEBOOK3-MANIFESTO.md  NOTEBOOK4-MANIFESTO.md  NOTEBOOK5-MANIFESTO.md  NOTEBOOK6-MANIFESTO.md  PROGRESSO-COMPLETO.md  README.md  RESUMO-EXECUTIVO-100%.md  STATUS-FINAL-100%.md  STATUS-FINAL-95%.md
Core/avila-term/: Cargo.toml
Core/avila-threshold/: Cargo.toml
Core/avila-time/: Cargo.toml
Core/avila-tls/: Cargo.toml
Core/avila-tracing/: Cargo.toml
Core/avila-udp/: Cargo.toml
Core/avila-validate/: Cargo.toml
Core/avila-web/: Cargo.toml
Core/backend/: .env.example  Cargo.toml  README.md
Core/frontend/: index.html
(+390 files in other folders)
