[workspace]
members = [
    "backend",
]
exclude = [
    "avila-core-workspace",
    "avila-ai-workspace",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Web Framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate", "macros", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

