[package]
name = "aviladb"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = [
    "Nícolas Ávila <nicolas@avila.inc>",
    "Avila Development Team <dev@avila.inc>",
]
license = "MIT OR Apache-2.0"
description = "AvilaDB - Globally distributed NoSQL database optimized for Brazil and LATAM"
repository = "https://github.com/avilaops/arxis"
homepage = "https://avila.inc"
documentation = "https://docs.rs/aviladb"
readme = "README.md"
keywords = ["database", "nosql", "distributed", "vector-search", "brazil"]
categories = ["database", "database-implementations", "data-structures"]

[dependencies]
avila-async = { path = "../../../arxis/avila-async" }
avila-serde = { path = "../../../arxis/avila-serde" }
avila-error = { path = "../../../arxis/avila-error" }
avila-id = { path = "../../../arxis/avila-id" }
avila-rand = { path = "../../../arxis/avila-rand" }
avila-crypto = { path = "../../../arxis/avila-core-workspace/avila-crypto" }

# External dependencies necessárias
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
base64 = "0.21"

# Compression (internal) - Coming soon on crates.io
# avila-compress = { version = "0.3.0", path = "../avila-compress" }

# Networking
avila-web = { path = "../../../arxis/avila-web" }
tower-http = { version = "0.6", features = ["cors", "trace"] }
# avila-http = { version = "0.1.0", path = "../avila-http" }
brotli = "7.0"

# Storage
# rocksdb = "0.22"  # Requires LLVM/Clang - optional for production use
bincode = "1.3"
sled = "0.34"  # Pure Rust embedded database

# Observability
avila-tracing = { path = "../../../arxis/avila-tracing" }
tracing-subscriber = "0.3"
# avx-telemetry = { version = "0.1", path = "../avx-telemetry" }

# Vector search
hnsw = { version = "0.11", optional = true }

# Multi-region
raft = { version = "0.7", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.5"
avila-time = { path = "../../../arxis/avila-time" }
tempfile = "3.12"

[features]
default = ["vector-search"]
vector-search = ["hnsw"]
distributed = ["raft"]
full = ["vector-search", "distributed"]

# [[bench]]
# name = "database_ops"
# harness = false

# [[bench]]
# name = "query_performance"
# harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
