[package]
name = "avila-frontend"
version = "1.0.0"
edition = "2021"
authors = ["Avila Team"]
description = "Avila Frontend Framework - O melhor framework web 100% Rust da era tecnológica"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "HtmlImageElement",
    "FileReader",
    "File",
    "FileList",
    "Blob",
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]
