[package]
name = "avila-primitives"
version = "0.1.0"
edition = "2021"
authors = [
    "Nícolas Ávila <nicolas@avila.inc>",
    "Avila Development Team <dev@avila.inc>",
]
license = "MIT OR Apache-2.0"
description = "Big integer primitives (U256, U512, U1024, U2048, U4096) - Built on avila-nucleus"
repository = "https://github.com/avilaops/arxis"
homepage = "https://avila.inc"
keywords = ["bigint", "cryptography", "no-std", "u256", "multiprecision"]
categories = ["cryptography", "no-std", "algorithms"]
rust-version = "1.70"

[lib]
name = "avila_primitives"
path = "src/lib.rs"

[dependencies]
avila-nucleus = { version = "0.1.0", path = "../avila-nucleus" }

[features]
default = ["simd"]
simd = ["avila-nucleus/simd"]
std = ["avila-nucleus/std"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
