[package]
name = "avila-time"
version = "0.1.0"
edition = "2021"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"
description = "AVL Platform date and time handling - replacement for chrono"
repository = "https://github.com/avilaops/arxis"
homepage = "https://avila.inc"
keywords = ["time", "date", "datetime", "avila", "avl"]

[dependencies]
avila-serde = { version = "0.2.0", path = "../avila-serde", optional = true }

[features]
default = []
serde = ["dep:avila-serde"]

[lib]
name = "avila_time"
path = "src/lib.rs"
