[package]
name = "avila-validate"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"
description = "Data validation with constraints and rules"
repository = "https://github.com/avilaops/arxis"
keywords = ["validation", "constraints", "rules", "no-std"]
categories = ["data-structures", "no-std"]

[lib]
name = "avila_validate"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[dependencies]
avila-error = { path = "../avila-error" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
