[package]
name = "erp-backend"
version = "0.1.0"
edition = "2021"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "compression-br", "fs", "auth"] }
hyper = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "migrate", "macros", "chrono", "uuid", "json"] }
mongodb = "2.8"
bson = { version = "2.9", features = ["chrono-0_4", "uuid-1"] }

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1"

# Error Handling
anyhow = "1"
thiserror = "1"

# Auth & Security
jsonwebtoken = "9"
bcrypt = "0.15"
argon2 = "0.5"
ring = "0.17"
sha2 = "0.10"
hmac = "0.12"
oauth2 = "4"
openidconnect = "3"

# Utils
uuid = { version = "1", features = ["v4", "v7", "serde", "fast-rng"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenv = "0.15"
lazy_static = "1.4"
once_cell = "1"

# HTTP Client (para integrações)
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "cookies"] }

# Redis (cache & sessions)
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "cluster", "json"] }

# Message Queue
lapin = "2"  # RabbitMQ
deadpool-lapin = "0.12"

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "builder"] }

# File Storage
aws-sdk-s3 = "1"
tokio-stream = "0.1"

# Decimal Math (financeiro)
rust_decimal = { version = "1", features = ["serde-float"] }
rust_decimal_macros = "1"

# Data Processing
csv = "1"
calamine = "0.24"  # Excel
zip = "0.6"

# Webhooks
hmac-sha256 = "1"

# Rate Limiting
governor = "0.6"

# Metrics & Monitoring
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"

# Template Engine (emails, PDFs)
tera = "1"

# PDF Generation
printpdf = "0.7"

# QR Code (PIX)
qrcode = "0.14"
image = "0.25"

# Cron Jobs
tokio-cron-scheduler = "0.10"

# GraphQL (opcional para analytics)
async-graphql = { version = "7", features = ["chrono", "uuid", "decimal"] }

# WebSocket
tokio-tungstenite = "0.21"

# Compression
flate2 = "1"

# Brazilian specific
cpf_cnpj = "0.2"  # Validação CPF/CNPJ

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
httpmock = "0.7"
fake = { version = "2", features = ["chrono", "uuid"] }
rstest = "0.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
